samples/_failures_safe/1761634595_f0c20d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4651e0b8.c: In function ‘main’:
./samples/SAFE/__tmp_4651e0b8.c:142:24: error: missing terminating " character
  142 |                 printf("Total entries for %s:
      |                        ^~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_4651e0b8.c:142:17: error: expected expression at end of input
  142 |                 printf("Total entries for %s:
      |                 ^~~~~~
./samples/SAFE/__tmp_4651e0b8.c:142:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_4651e0b8.c:142:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_4651e0b8.c:142:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_4651e0b8.c:142:17: error: expected declaration or statement at end of input
